# Room-allocation

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
Docs/: METHODOLOGY.md
benchmarks/: README.md  run_benchmark.py
engine/: Untitled.ipynb  __init__.py  cli.py  exact.py  optimizer.py  preprocessing.py  scoring.py
legacy/: Clustering.py  README.md  project.ipynb
legacy/Models/: best_agglomerative_model.pkl  best_dbscan_model.pkl  best_gmm_model.pkl  best_kmeans_model.pkl
tests/: __init__.py  test_cli.py  test_optimizer.py  test_preprocessing.py  test_repository_data.py  test_scoring.py
