[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "unimate-room-assignment"
version = "2.0.0"
description = "Validated multi-criteria room assignment for university dormitories"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "streamlit>=1.56,<2",
    "pandas>=2.2,<3.1",
    "numpy>=2.1,<3",
    "plotly>=5.24,<7",
    "ortools>=9.15,<10",
    "openpyxl>=3.1,<4",
]

[project.scripts]
unimate = "engine.cli:main"

[tool.setuptools]
packages = ["engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
